Compiling optimization options added to CFLAGS. Some other files to ignore.

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -127,7 +127,9 @@ CFLAGS += -Wa,-adhlns=$(<:.c=.lst)
 CFLAGS += $(patsubst %,-I%,$(EXTRAINCDIRS))
 CFLAGS += $(CSTANDARD)
 CFLAGS += -DF_CPU=$(F_CPU)
-
+CFLAGS += -ffunction-sections
+CFLAGS += -fdata-sections
+CFLAGS += -Wl,--gc-sections
 
 
 # Assembler flags.
